[package]
name        = "daemon"
version     = "0.0.1"
edition     = "2021"

description = "daemon: web interface & iw package router"
authors     = ["Dmitry Ponyatov <dponyatov@gmail.com>"]

[build-dependencies]
lalrpop = "*"

[dependencies]
config = { path = "../config" }
lib    = { path = "../lib"    }

lalrpop-util = { version = "*", features = ["lexer"] }
regex = "*"
# lazy_static = "*"
